--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>бургер чеддер</title>
   <link href="styles/style.css" rel="stylesheet">
+  <script src="scripts/script.js" defer></script>
 </head>
 
 <body>
@@ -19,12 +20,12 @@
         </div>
         <nav class="menu">
           <ul class="menu-list">
-            <li class="menu-item"><a href="#">Почему у нас</a></li>
-            <li class="menu-item"><a href="#">Меню бургеров</a></li>
-            <li class="menu-item"><a href="#">Оформление заказа</a></li>
+            <li class="menu-item"><a data-link="why">Почему у нас</a></li>
+            <li class="menu-item"><a data-link="products">Меню бургеров</a></li>
+            <li class="menu-item"><a data-link="order">Оформление заказа</a></li>
           </ul>
         </nav>
-        <div class="currency" title="Изменить валюту">$</div>
+        <div class="currency" id="change-currency" title="Изменить валюту">$</div>
       </div>
     </header>
 
@@ -36,7 +37,7 @@
           <p class="main-text">Мы обновили наше меню, спешите попробовать сезонные новинки и насладиться отличным вкусом
             наших бургеров. Готовим для вас лучшие бургеры в городе из отборной мраморной говядины.</p>
           <div class="main-action">
-            <button class="button">Смотреть меню</button>
+            <button class="button" id="main-action-button">Смотреть меню</button>
           </div>
         </div>
         <img class="main-image" src="images/main_burger.png" alt="Big burger">
@@ -44,7 +45,7 @@
     </section>
   </section>
 
-  <section class="why">
+  <section class="why" id="why">
     <div class="container">
       <div class="why-title common-title">почему нас выбирают?</div>
       <div class="why-items">
@@ -70,7 +71,7 @@
     </div>
   </section>
 
-  <section class="products">
+  <section class="products" id="products">
     <div class="container">
       <div class="products-title common-title">выберите свой бургер</div>
       <div class="products-items">
@@ -83,7 +84,7 @@
             салат айсбер, майонез, кетчуп, сырный соус</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">8 $</div>
+              <div class="products-item-price" data-base-price="8">8 $</div>
               <div class="products-item-weight">360 гр</div>
             </div>
             <div class="products-item-action">
@@ -108,7 +109,7 @@
             маринованный, лук маринованный, салат Ромен, бекон, соус BBQ</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">7 $</div>
+              <div class="products-item-price" data-base-price="7">7 $</div>
               <div class="products-item-weight">390 гр</div>
             </div>
             <div class="products-item-action">
@@ -133,7 +134,7 @@
             томат, бекон, красный лук, соус бургер, горчица</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">10 $</div>
+              <div class="products-item-price" data-base-price="10">10 $</div>
               <div class="products-item-weight">420 гр</div>
             </div>
             <div class="products-item-action">
@@ -158,7 +159,7 @@
             соус барбекю, соус сырный, салат айсберг</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">7 $</div>
+              <div class="products-item-price" data-base-price="7">7 $</div>
               <div class="products-item-weight">220 гр</div>
             </div>
             <div class="products-item-action">
@@ -183,7 +184,7 @@
             сыр, сырный соус, кетчуп, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">8 $</div>
+              <div class="products-item-price" data-base-price="8">8 $</div>
               <div class="products-item-weight">220 гр</div>
             </div>
             <div class="products-item-action">
@@ -208,7 +209,7 @@
             криспи лук, кетчуп, соус сырный, горчица, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">9 $</div>
+              <div class="products-item-price" data-base-price="9">9 $</div>
               <div class="products-item-weight">320 гр</div>
             </div>
             <div class="products-item-action">
@@ -233,7 +234,7 @@
             соус барбекю, соус сырный, салат айсберг</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">8 $</div>
+              <div class="products-item-price" data-base-price="8">8 $</div>
               <div class="products-item-weight">280 гр</div>
             </div>
             <div class="products-item-action">
@@ -258,7 +259,7 @@
             красный лук, сыр, перец халапеньо, кетчуп, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">7 $</div>
+              <div class="products-item-price" data-base-price="7">7 $</div>
               <div class="products-item-weight">380 гр</div>
             </div>
             <div class="products-item-action">
@@ -283,7 +284,7 @@
             маринованный, криспи лук, кетчуп, соус сырный, горчица, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">11 $</div>
+              <div class="products-item-price" data-base-price="11">11 $</div>
               <div class="products-item-weight">400 гр</div>
             </div>
             <div class="products-item-action">
@@ -308,7 +309,7 @@
             барбекю, соус сырный, салат айсберг, свежий томат</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">9 $</div>
+              <div class="products-item-price" data-base-price="9">9 $</div>
               <div class="products-item-weight">300 гр</div>
             </div>
             <div class="products-item-action">
@@ -333,7 +334,7 @@
             помидор, огурец маринованный, сыр, горчичный соус, кетчуп, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">8 $</div>
+              <div class="products-item-price" data-base-price="8">8 $</div>
               <div class="products-item-weight">320 гр</div>
             </div>
             <div class="products-item-action">
@@ -358,7 +359,7 @@
             маринованный, томат, кетчуп, двойной сыр чеддар, горчица, зелень</div>
           <div class="products-item-extra">
             <div class="products-item-info">
-              <div class="products-item-price">9 $</div>
+              <div class="products-item-price" data-base-price="9">9 $</div>
               <div class="products-item-weight">360 гр</div>
             </div>
             <div class="products-item-action">
@@ -377,7 +378,7 @@
       </div>
     </div>
   </section>
-  <section class="order">
+  <section class="order" id="order">
     <div class="container">
       <div class="order-title common-title">оформление заказа</div>
       <img class="order-image" src="images/order_image.png" alt="Burger in the box">
@@ -385,15 +386,15 @@
         <div class="order-form-text">Заполните все данные и наш менеджер свяжется с вами для подтверждения заказа</div>
         <div class="order-form-inputs">
           <div class="order-form-input">
-            <input type="text" placeholder="Ваш заказ">
+            <input type="text" placeholder="Ваш заказ" id="burger">
           </div>
           <div class="order-form-input">
-            <input type="text" placeholder="Ваше имя">
+            <input type="text" placeholder="Ваше имя" id="name">
           </div>
           <div class="order-form-input">
-            <input type="text" placeholder="Ваш телефон">
+            <input type="text" placeholder="Ваш телефон" id="phone">
           </div>
-          <button class="button">Оформить заказ</button>
+          <button class="button" id="order-action">Оформить заказ</button>
         </div>
       </div>
   </section>
